# API-bancaria

./: .gitignore  README.md  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py
app/routers/: transactions.py  users.py
