[project]
name = "api-bancaria"
version = "0.1.0"
description = ""
authors = [
    {name = "DaniloGEP",email = "danilo.gep@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.120.2,<0.121.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "bcrypt (>=5.0.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "api_bancaria", from = "src"}]

[tool.poetry.dependencies]
passlib = {allow-prereleases = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
